[project]
name = "zero"
version = "0.1.0"
description = "ZERO — 地球文明共生智能系统"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "urllib3>=2.0",
    "networkx>=3.2",
    "numpy>=1.24",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
zero = "main:main"
